--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -28,6 +28,44 @@
     column-gap: 16px;
   }
 
+  &__overlay-menu-dialog {
+    position: fixed;
+    inset: 0;
+
+    justify-content: start;
+    flex-direction: column-reverse;
+
+    width: 100%;
+    height: 100%;
+    padding: 16px var(--container-padding-x);
+    background-color: var(--color-black-20);
+    border: none;
+
+    transition-duration: var(--transition-duration);
+    transition-behavior: allow-discrete;
+
+    @include tablet-above {
+      display: contents;
+    }
+
+    @mixin starting-styles {
+      opacity: 0;
+      translate: 50%;
+    }
+
+    &[open] {
+      display: flex;
+
+      @starting-style {
+        @include starting-styles;
+      }
+    }
+
+    &:not([open]) {
+      @include starting-styles;
+    }
+  }
+
   &__menu {
     border-radius: var(--border-radius-l);
 
@@ -88,5 +126,9 @@
     display: flex;
     align-items: center;
     column-gap: 10px;
+  }
+
+  &__burger-button {
+    position: relative;
   }
 }
