--- a/src/styles/helpers/mixins.scss
+++ b/src/styles/helpers/mixins.scss
@@ -68,9 +68,9 @@
 }
 
 @mixin focus-visible {
-  outline: 2px solid var(--color-white);
-  border-radius: var(--border-radius-s);
+  outline: 2px dashed var(--color-white);
   outline-offset: 4px;
+  transition-duration: 0s !important;
 }
 
 @mixin disabled {
